<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Weather">

    <Button
        android:id="@+id/weather_bornButton"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:text="@string/weather_born"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_introText" />

    <Button
        android:id="@+id/weather_whereIAmNowButton"
        android:layout_width="255sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="@string/weather_whereIAmNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_brotherLivesButton" />

    <Button
        android:id="@+id/weather_likeToLiveButton"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:text="@string/weather_likeToLive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_liveButton" />

    <Button
        android:id="@+id/weather_brotherLivesButton"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="@color/blue_dark"
        android:text="@string/weather_brotherLives"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_likeToLiveButton" />

    <Button
        android:id="@+id/weather_liveButton"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="@color/blue_dark"
        android:text="@string/weather_live"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_bornButton" />

    <TextView
        android:id="@+id/weather_introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/weather_intro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:contentDescription="@string/cakeDescription"
        android:src="@drawable/ic_baseline_cake_24"
        app:layout_constraintBottom_toTopOf="@+id/weather_liveButton"
        app:layout_constraintEnd_toStartOf="@+id/weather_bornButton"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_introText" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/walkingDescription"
        android:src="@drawable/ic_baseline_directions_walk_24"
        app:layout_constraintBottom_toTopOf="@+id/weather_likeToLiveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/weather_liveButton"
        app:layout_constraintTop_toBottomOf="@+id/weather_bornButton" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/childDescription"
        android:src="@drawable/ic_baseline_child_care_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/weather_brotherLivesButton"
        app:layout_constraintTop_toBottomOf="@+id/weather_likeToLiveButton" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/houseDescription"
        android:src="@drawable/ic_baseline_house_24"
        app:layout_constraintBottom_toTopOf="@+id/weather_brotherLivesButton"
        app:layout_constraintEnd_toStartOf="@+id/weather_likeToLiveButton"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weather_liveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>